--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,15 @@
   <artifactId>downloader</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>downloader</name>
+  <name>randomDownloader</name>
   <url>http://www.agoda.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <skipTests>false</skipTests>
+    <jetty.version>9.4.15.v20190215</jetty.version>
   </properties>
 
   <dependencies>
@@ -54,6 +56,21 @@
         <artifactId>log4j-core</artifactId>
         <version>2.11.2</version>
       </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${jetty.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlets -->
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -81,6 +98,14 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.20.1</version>
+          <configuration>
+            <skipITs>${skipTests}</skipITs>
+          </configuration>
+      </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
