--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <jetty.version>9.4.15.v20190215</jetty.version>
     <jackson-annotations-version>2.9.8</jackson-annotations-version>
     <jackson.version.core>2.9.8</jackson.version.core>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
